2006-02-06  Richard Stellingwerff  <remenic@gmail.com>

	* engines/clearlooks/src/clearlooks_draw.c:
	(clearlooks_draw_button):

	Default buttons can now be recognized by a more visible border.
	I really need to rework the button drawing code, because it's huge
	and ugly. And this is not the place to talk about that.

2006-02-04  Richard A. Stellingwerff  <remenic@gmail.com>

	* engines/clearlooks/src/clearlooks_style.c: (draw_check):

	Added inconsistent state. Fixes #325932.

2006-02-01  Richard A. Stellingwerff  <remenic@gmail.com>

	* engines/clearlooks/src/animation.h:

	No longer including animation.c, but splitted the implementation
	from the prototype. From Benjamin's patch.

2006-02-01  Richard A. Stellingwerff  <remenic@gmail.com>

	* engines/clearlooks/src/config.h.in:
	
	Fixing incomplete check-in..

2006-02-01  Richard A. Stellingwerff  <remenic@gmail.com>

	* configure.ac:
	
	Patch from Benjamin Berg to add a --enable-animation option to
	the configure script. Enables animation for Clearlooks only.
	
	* engines/clearlooks/Makefile.am:
	* engines/clearlooks/src/animation.c: (force_widget_redraw),
	(start_timer), (stop_timer), (animation_info_destroy),
	(on_animated_widget_destruction),
	(destroy_animation_info_and_weak_unref), (lookup_animation_info),
	(add_animation), (update_animation_info),
	(animation_timeout_handler), (on_checkbox_toggle),
	(on_connected_widget_destruction), (disconnect_all_signals),
	(find_signal_info), (clearlooks_animation_progressbar_add),
	(clearlooks_animation_connect_checkbox),
	(clearlooks_animation_is_animated), (clearlooks_animation_elapsed),
	(clearlooks_animation_cleanup):
	* engines/clearlooks/src/clearlooks_rc_style.c:
	(clearlooks_rc_style_finalize), (clearlooks_rc_style_class_init),
	(theme_parse_boolean):
	* engines/clearlooks/src/clearlooks_style.c: (draw_box),
	(draw_option), (draw_check), (clearlooks_style_unrealize):
	* engines/clearlooks/src/clearlooks_style.h:
